# lierTasks

Cpp/: notes.txt
Cpp/example/: program
Cpp/task2/: CMakeLists.txt  finanzas.cpp  finanzas.h  finanzas_test.cpp  main.cpp
Cpp/task_testcases1/: CMakeLists.txt  prueba_paralaje.cpp
JS/: notes.txt
JS/Ass4/Reference/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/my-app/.next/: trace
JS/Ass4/Reference/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/my-app/.next/cache/: .rscinfo
JS/Ass4/Reference/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/my-app/.next/server/: server-reference-manifest.js  server-reference-manifest.json
JS/Ass4/Response/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/back-end/: User.py  app.py
JS/Ass4/Response/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/my-app/: package-lock.json
JS/Ass4/Response/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/my-app/.next/: trace
JS/Ass4/Response/hopperrlhfassessment/hopperrlhfassessment/hopper_rlhf_assessment/my-app/.next/cache/: .rscinfo
JS/Ass5/: package-lock.json  package.json
JS/Ass5/backend/: data.js  index.js  router.js
JS/Ass5/backend/controller/zakazStoreCtrl/: auchanCtrl.js  auchanCtrl1.js  auchanCtrl2.js
JS/Ass5/backend/model/zakazStoreModel/: auchanProductModel.js  auchancategoryModel.js
JS/NP/: index.html  styles.css
Python/Ass1/: Corrected.py  Program.py
Python/Ass2/: Corrected.py  Program.py
Python/Ass3/: Program.py
Python/Ass4/: ResA.py  model_10.pt
(+49 files in other folders)
